remove gap for plus users with ads disabled, small visual fixes (#608)

--- a/components/playground/server.css
+++ b/components/playground/server.css
@@ -4,14 +4,11 @@
   display: grid;
 
   grid-template-columns:
-    0
-    [full-start content-start]
+    [content-start]
     1fr
-    [content-end]
-    var(--layout-sidebar-gap)
-    [sidebar-start right-sidebar-start]
-    12rem
-    [full-end sidebar-end right-sidebar-end];
+    [content-end sidebar-start]
+    min-content
+    [sidebar-end];
 
   height: 100%;
   min-height: calc(
@@ -20,23 +17,31 @@
 
   padding: 1rem;
 
-  @media (--screen-layout-no-sidebar) {
-    grid-template-columns: var(--layout-no-sidebar);
-  }
-
   mdn-playground {
     display: block;
     grid-column: content;
     height: 100%;
   }
 
-  mdn-placement-sidebar {
-    display: block;
-    grid-column: right-sidebar;
-    justify-self: left;
+  .sidebar {
+    display: flex;
 
-    @media (--screen-layout-no-sidebar) {
+    grid-column: sidebar;
+
+    justify-content: center;
+
+    min-width: 12rem;
+
+    margin-left: 1rem;
+
+    @media (--screen-small-and-narrower) {
       grid-column: content;
     }
+  }
+}
+
+:root[data-nop="yes"] .playground {
+  .sidebar {
+    display: none;
   }
 }
